Refactor index.html to improve structure and clarity

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ footer {
     display: flex;
   }
   .hero h1{
-    font-size:1.9rem;
+    font-size:1.8rem;
   }
   .hamburger {
     display: flex;
@@ -391,10 +391,6 @@ footer {
     </div>
 
     <div class="skill">
-      <h3>⚛️ React</h3>
-    </div>
-
-    <div class="skill">
       <h3>🎯 UI / UX Design</h3>
     </div>
 
@@ -412,39 +408,96 @@ footer {
 
   <!-- PROJECTS -->
  <!-- PROJECTS -->
+<!-- PROJECTS (9.5 LEVEL) -->
 <section id="projects">
   <h2>Projects</h2>
+
   <div class="projects-grid">
 
+    <!-- Bravexa AI (Flagship) -->
     <div class="project-card">
       <h3>🤖 Bravexa AI</h3>
-      <p>Frontend-only, rule-based chatbot with clean chat UI and interaction flow.</p>
+
+      <p>
+        <strong>Problem:</strong> Most chatbot interfaces feel cluttered and robotic,
+        making conversations hard to follow.
+      </p>
+      <p>
+        <strong>Solution:</strong> Built a frontend-only, rule-based chatbot with a
+        clean conversational UI and predictable interaction flow.
+      </p>
+      <p>
+        <strong>Impact:</strong> Faster interactions, clearer responses, and improved
+        user engagement through simplicity.
+      </p>
+
+      <p style="margin-top:8px;color:#94a3b8;">
+        <strong>Design focus:</strong> clarity, minimal steps, conversational comfort
+      </p>
+
       <div class="project-links">
-        <a href="https://mohith933.github.io/Bravexa-Ai/home.html" target="_blank">Live</a>
-        <a href="https://github.com/Mohith933/Bravexa-Ai" target="_blank">Code</a>
+        <a href="https://your-live-link" target="_blank">Live</a>
+        <a href="https://github.com/mohith933" target="_blank">Code</a>
       </div>
     </div>
 
+    <!-- Valentine AI -->
     <div class="project-card">
       <h3>💖 Valentine AI</h3>
-      <p>Emotional chatbot interface focused on expressive UI and user-friendly design.</p>
+
+      <p>
+        <strong>Problem:</strong> Emotional chat experiences often lack warmth and feel
+        mechanically scripted.
+      </p>
+      <p>
+        <strong>Solution:</strong> Designed a playful frontend chatbot UI focused on
+        emotional tone, timing, and expressive responses.
+      </p>
+      <p>
+        <strong>Impact:</strong> More engaging conversations and a lighter, more human
+        interaction experience.
+      </p>
+
+      <p style="margin-top:8px;color:#94a3b8;">
+        <strong>Design focus:</strong> emotional tone, UX flow, visual friendliness
+      </p>
+
       <div class="project-links">
-        <a href="https://mohith933.github.io/Valantine-Ai/home.html" target="_blank">Live</a>
-        <a href="https://github.com/Mohith933/Valantine-Ai" target="_blank">Code</a>
+        <a href="https://your-live-link" target="_blank">Live</a>
+        <a href="https://github.com/mohith933" target="_blank">Code</a>
       </div>
     </div>
 
+    <!-- Portfolio -->
     <div class="project-card">
       <h3>🧑‍💻 Personal Portfolio</h3>
-      <p>Responsive developer portfolio showcasing projects, skills, and UI design.</p>
+
+      <p>
+        <strong>Problem:</strong> Many portfolios are overcrowded and fail to clearly
+        communicate strengths within seconds.
+      </p>
+      <p>
+        <strong>Solution:</strong> Built a focused, responsive portfolio highlighting
+        only finished projects with clear intent.
+      </p>
+      <p>
+        <strong>Impact:</strong> Faster recruiter understanding and stronger first
+        impression within 30 seconds.
+      </p>
+
+      <p style="margin-top:8px;color:#94a3b8;">
+        <strong>Design focus:</strong> clarity, readability, recruiter-first layout
+      </p>
+
       <div class="project-links">
-        <a href="https://mohith933.github.io/Portofolio/" target="_blank">Live</a>
-        <a href="https://github.com/Mohith933/Portofolio" target="_blank">Code</a>
+        <a href="https://mohith933.github.io/portofolio/" target="_blank">Live</a>
+        <a href="https://github.com/mohith933" target="_blank">Code</a>
       </div>
     </div>
 
   </div>
 </section>
+
 
 
 
@@ -567,4 +620,5 @@ closePopup.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
