--- a/index.html
+++ b/index.html
@@ -468,6 +468,38 @@ footer {
       </div>
     </div>
 
+    <!-- AutoCAD Web (Canvas Tool) -->
+<div class="project-card">
+  <h3>📐 AutoCAD Web (Frontend Canvas Tool)</h3>
+
+  <p>
+    <strong>Problem:</strong> Most frontend projects focus on forms or content and
+    don’t demonstrate spatial logic or system-style UI thinking.
+  </p>
+
+  <p>
+    <strong>Solution:</strong> Built a desktop-first AutoCAD-like web tool using
+    HTML Canvas with command-based interactions (LINE, RECT, MOVE),
+    grid snapping, undo, and localStorage persistence.
+  </p>
+
+  <p>
+    <strong>Impact:</strong> Demonstrates engineering-style frontend thinking,
+    canvas rendering, state management, and command-driven UX instead of
+    typical UI patterns.
+  </p>
+
+  <p style="margin-top:8px;color:#94a3b8;">
+    <strong>Design focus:</strong> precision, system UI, desktop productivity tools
+  </p>
+
+  <div class="project-links">
+    <a href="https://mohith933.github.io/Autocad-Clone/demo.html" target="_blank">Live</a>
+    <a href="https://github.com/Mohith933/Autocad-Clone" target="_blank">Code</a>
+  </div>
+</div>
+
+
     <!-- Portfolio -->
     <div class="project-card">
       <h3>🧑‍💻 Personal Portfolio</h3>
@@ -620,5 +652,6 @@ closePopup.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
 
