--- a/index.html
+++ b/index.html
@@ -436,8 +436,8 @@ footer {
       </p>
 
       <div class="project-links">
-        <a href="https://your-live-link" target="_blank">Live</a>
-        <a href="https://github.com/mohith933" target="_blank">Code</a>
+        <a href="https://mohith933.github.io/Bravexa-Ai/" target="_blank">Live</a>
+        <a href="https://github.com/Mohith933/Bravexa-Ai" target="_blank">Code</a>
       </div>
     </div>
 
@@ -463,8 +463,8 @@ footer {
       </p>
 
       <div class="project-links">
-        <a href="https://your-live-link" target="_blank">Live</a>
-        <a href="https://github.com/mohith933" target="_blank">Code</a>
+        <a href="https://mohith933.github.io/Valantine-Ai/" target="_blank">Live</a>
+        <a href="https://github.com/Mohith933/Valantine-Ai" target="_blank">Code</a>
       </div>
     </div>
 
@@ -652,6 +652,7 @@ closePopup.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
 
 
