--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@ footer {
       </p>
 
       <div class="project-links">
-        <a href="https://mohith933.github.io/portofolio/" target="_blank">Live</a>
-        <a href="https://github.com/mohith933" target="_blank">Code</a>
+        <a href="https://mohith933.github.io/Portofolio/" target="_blank">Live</a>
+        <a href="https://github.com/Mohith933/Portofolio" target="_blank">Code</a>
       </div>
     </div>
 
@@ -652,6 +652,7 @@ closePopup.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
 
 
