--- a/index.html
+++ b/index.html
@@ -441,32 +441,34 @@ footer {
       </div>
     </div>
 
-    <!-- Valentine AI -->
+    <!-- Clarity AI -->
     <div class="project-card">
-      <h3>💖 Valentine AI</h3>
+  <h3>🎙️ Clarity AI</h3>
 
-      <p>
-        <strong>Problem:</strong> Emotional chat experiences often lack warmth and feel
-        mechanically scripted.
-      </p>
-      <p>
-        <strong>Solution:</strong> Designed a playful frontend chatbot UI focused on
-        emotional tone, timing, and expressive responses.
-      </p>
-      <p>
-        <strong>Impact:</strong> More engaging conversations and a lighter, more human
-        interaction experience.
-      </p>
+  <p>
+    <strong>Problem:</strong> Many users struggle with low, unclear, or
+    unconfident voice output during communication.
+  </p>
+  <p>
+    <strong>Solution:</strong> Built a browser-based Text-to-Speech interface
+    using the Web Speech API to convert text into clear, confident voice output
+    in real time.
+  </p>
+  <p>
+    <strong>Impact:</strong> Enables users to express ideas more confidently
+    without relying on backend services or external APIs.
+  </p>
 
-      <p style="margin-top:8px;color:#94a3b8;">
-        <strong>Design focus:</strong> emotional tone, UX flow, visual friendliness
-      </p>
+  <p style="margin-top:8px;color:#94a3b8;">
+    <strong>Design focus:</strong> voice clarity, accessibility, real-time feedback
+  </p>
 
-      <div class="project-links">
-        <a href="https://mohith933.github.io/Valantine-Ai/" target="_blank">Live</a>
-        <a href="https://github.com/Mohith933/Valantine-Ai" target="_blank">Code</a>
-      </div>
-    </div>
+  <div class="project-links">
+    <a href="https://mohith933.github.io/Clarity-AI/base.html" target="_blank">Live</a>
+    <a href="https://github.com/Mohith933/Clarity-AI" target="_blank">Code</a>
+  </div>
+</div>
+
 
     <!-- AutoCAD Web (Canvas Tool) -->
 <div class="project-card">
@@ -652,6 +654,7 @@ closePopup.addEventListener("click", () => {
 </script>
 </body>
 </html>
+
 
 
 
